# pattern_recog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/flood_classification/: __init__.py  load.py  process.py
